ecmascript/parser/tests/typescript-errors/tsc/types/typeAliases/reservedNamesInAliases/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/types/typeAliases/reservedNamesInAliases/input.ts:6:6
  |
6 | type void = I;
  |      ^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/types/typeAliases/reservedNamesInAliases/input.ts:6:1
  |
6 | type void = I;
  | ^^^^

